Services: Fix layout bug exposed by 9ea3dd9

--- a/media/css/services.css
+++ b/media/css/services.css
@@ -1,6 +1,7 @@
 #services {
   position: relative;
   width: 770px;
+  min-height: 850px;
 }
 
 #services h1 {
